feat: [Adicionando Log às classes de Service com Slf4j]